Styled Contract us form footer in small views so that the button and form help are aligned along the bottom Styled Office List so they are in 3 columns in medium view. Styled Contract Us Text and Form to be side by side in large view. Text Contact Us Text to not extend the form when accordion is used. Added styles for Error messages Fixed Missing Hover effect on contact us submit button Fixed missing Cursor Change on Checkbox Fixed Missing Hover Effect on Out of Hours Accordion

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13117,13 +13117,19 @@ article[data-news-type=Careers] .news-readmore {
 
 #section-offices {
   margin-top: 50px;
+  margin-bottom: 40px;
 }
 
 .office-list {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   margin-top: 20px;
   gap: 60px;
+}
+@media only screen and (min-width: 992px) {
+  .office-list {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+  }
 }
 
 .office {
@@ -13144,6 +13150,7 @@ article[data-news-type=Careers] .news-readmore {
 .office-content h2 {
   color: #333645;
   font-weight: 400;
+  font-size: 1.25rem;
 }
 .office-content a {
   text-decoration: none;
@@ -13185,6 +13192,27 @@ article[data-news-type=Careers] .news-readmore {
   border-color: #735093;
 }
 
+#section-contact-us {
+  padding-bottom: 50px;
+}
+
+#section-contact-us .container {
+  display: grid;
+}
+@media only screen and (min-width: 1260px) {
+  #section-contact-us .container {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+  }
+  #section-contact-us .container .contact-form-container {
+    order: -1;
+    grid-column: span 2;
+  }
+}
+
+.contact-text {
+  grid-row: span 2;
+}
 .contact-text p {
   font-weight: 600;
   color: #333645;
@@ -13203,11 +13231,15 @@ article[data-news-type=Careers] .news-readmore {
 .btn-ooh {
   all: unset;
   cursor: pointer;
+  font-weight: 600;
+}
+.btn-ooh:hover {
+  text-decoration: underline;
 }
 
 .ooh-text {
   overflow: clip;
-  transition: 1s ease-in-out;
+  transition: 0.5s ease-in-out;
   max-height: 0;
 }
 .ooh-text.active {
@@ -13226,6 +13258,16 @@ article[data-news-type=Careers] .news-readmore {
 .contact-form {
   display: grid;
   gap: 10px;
+}
+@media only screen and (min-width: 992px) {
+  .contact-form {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .contact-form label[for=message],
+  .contact-form label[for=marketing],
+  .contact-form .form-footer {
+    grid-column: span 2;
+  }
 }
 .contact-form label {
   font-weight: 600;
@@ -13248,6 +13290,15 @@ article[data-news-type=Careers] .news-readmore {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+.contact-form input:focus,
+.contact-form textarea:focus {
+  border-color: #5bc0de;
+  outline: 0;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(91, 192, 222, 0.6);
+}
+.contact-form .has-error {
+  border-color: #d64541;
+}
 .contact-form input {
   height: 47px;
 }
@@ -13269,6 +13320,9 @@ article[data-news-type=Careers] .news-readmore {
   margin: 0;
   padding: 0;
 }
+.contact-form label[for=marketing] a {
+  color: inherit;
+}
 .contact-form label[for=marketing] input[type=checkbox] {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -13284,6 +13338,7 @@ article[data-news-type=Careers] .news-readmore {
   font-size: 22px;
   text-align: center;
   line-height: 1.41;
+  cursor: pointer;
 }
 .contact-form label[for=marketing] input[type=checkbox]::before {
   content: "✓";
@@ -13298,11 +13353,20 @@ article[data-news-type=Careers] .news-readmore {
   transform: scale(1);
 }
 .contact-form .form-footer {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  justify-items: center;
   align-items: center;
   gap: 10px;
   margin-top: 40px;
+}
+@media only screen and (min-width: 480px) {
+  .contact-form .form-footer {
+    grid-template-columns: max-content 1fr;
+  }
+  .contact-form .form-footer small {
+    justify-self: right;
+    order: 2;
+  }
 }
 .contact-form .form-footer button {
   color: #fff;
@@ -13316,4 +13380,9 @@ article[data-news-type=Careers] .news-readmore {
   border-radius: 3px;
   width: -moz-fit-content;
   width: fit-content;
+  cursor: pointer;
+}
+.contact-form .form-footer button:hover {
+  background-color: #22242e;
+  border-color: #191a22;
 }/*# sourceMappingURL=style.css.map */
